<resources>
    <string name="app_name">Adinz</string>
    <string name="driver_id">Driver ID</string>
    <string name="type_here">Type Here</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="powered_by">Powered by NTAMTECH</string>
    <string name="login_successfully">login successfully</string>
    <string name="driver_code_empty">Please Enter Driver Code</string>
    <string name="driver_password_empty">Please Enter Password</string>
    <string name="driver_email">Driver Email</string>
</resources>
